tests/snapshots/serde__de_array_buffer_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer()"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [],
        max_byte_length: None,
    },
}

