tests/snapshots/serde__de_arraybuffer_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer(0)"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [],
        max_byte_length: None,
    },
}

