tests/snapshots/serde__de_bigint.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1n"
---
=== VALUE ===
BigInt(1)

=== HEAP ===
Heap {}

