tests/snapshots/serde__de_bigint64array_many_bytes.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array([0n, -1n, 2n, -3n, 4n, -5n, 6n, -7n, 8n])"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            2,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            253,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            4,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            251,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            6,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            249,
            255,
            255,
            255,
            255,
            255,
            255,
            255,
            8,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: BigInt64Array,
        buffer: *0,
        byte_offset: 0,
        length: 9,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

