tests/snapshots/serde__de_bigint64array_resizable_non_tracking.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew BigInt64Array(new ArrayBuffer(16, { maxByteLength: 24 })).subarray(0, 1)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: Some(
            24,
        ),
    },
    1: ArrayBufferView {
        kind: BigInt64Array,
        buffer: *0,
        byte_offset: 0,
        length: 1,
        is_length_tracking: false,
        is_backed_by_rab: true,
    },
}

